--- a/chess/src/App.css
+++ b/chess/src/App.css
@@ -52,3 +52,12 @@ body {
   height: 25px;
   width: 600px;
 }
+
+.piece {
+  background-image: url('../pieces/dark-queen.png');
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
